# khai-share

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
config/: baselines.json  credentials.example.json  homebay-a11y.json  homebay-animations.json  homebay-dryrun.json  homebay-perf.json  homebay-visual.json  schedules.json  watches.json
config/audit-profiles/: _template.json
config/flows/: example.com.json
config/suites/: homebay-comprehensive.json  homebay-smoke.json  suite.schema.json
khai_mcp/: __init__.py  client.py  server.py  test_client.py
scripts/: test-checkout.js  test-consulting-promo.js
src/: app.js  server.js
src/agent/: accessibility.js  actions.js  animationCapture.js  apiFuzzer.js  auditor.js  baselineManager.js  communicationMonitor.js  crawler.js  flowTester.js  formFuzzer.js  lighthouse.js  linkChecker.js  passwordRotator.js  purchaseTester.js  regressionDetector.js  scheduler.js  suiteRunner.js  visualRegression.js  watchManager.js
src/homebay/: accessibility.js  animationTest.js  animations.js  auth.js  config.js  dryrun.js  navigate.js  performance.js  pool.js  visual.js
src/public/: about.html  app.js  guide.html  (+2 more)
test/: audit-checks.test.js  browser.test.js  jobStore.test.js  regressionDetector.test.js  response.test.js  safePath.test.js  webhook.test.js
(+103 files in other folders)
